# gunviolence_ptbr

./: README.md  pyproject.toml  regen_charts.ipynb
code/dataviz/: acled.ipynb  bertimbau-predictions.ipynb  fogo_cruzado_parellel_assumption.ipynb  fogocruzado_interactions_allstates.ipynb  fogocruzado_interactions_beforeafter.ipynb  fogocruzado_interactions_events.ipynb  lethality_rio.ipynb  utils.py
code/intervention/: diff_in_diff.ipynb
code/nlp/: baseline-models.ipynb  bertimbau_eval.ipynb  bertimbau_selftrain.ipynb  prepare_test_reports.ipynb  prepare_train.ipynb  prepare_unlabel.ipynb  utils.py
code/prototype/: backup_airtable.py  update_airtable.py
code/train_test_sets/: h_interactions.ipynb  h_reports.ipynb  l_train.ipynb  u_unlabel.ipynb
code/twitter/get/: broad_search.py  fogocruzado_replies.py  geo_search.py
code/twitter/process/: dataset_ugeo.py  dataset_ulang.py  fogocruzadorj_replies.py  group_interactions_fogocruzado.ipynb  utils.py
data/fogocruzado/: cases_1jul22_3jul23.csv
data/isp/: DOMensalEstadoDesde1991.csv
data/my_intervention/: airtable_backup.csv  interactions_per_day_all.csv  interactions_per_day_rjba.csv  interventions.csv
data/twitter/: fogocruzado_interactions_2023.csv
map/: map_rio.qgz  metropolitana.gpkg  radius_150.gpkg  rio_frontiers.gpkg
